--- a/html/list.html
+++ b/html/list.html
@@ -4,13 +4,31 @@
         <title>hi</title>
     </head>
     <body>
-        <ul style="list-style-type:decimal;">
+        <div style="text-align:center; border: 1px solid black; overflow: hidden;">
+        <ul style="list-style-type:decimal; border: 2px solid red;width: 25%;float:left; margin:10px 10px">
             <li>shop</li>
             <li>stick</li>
             <li>toys</li>
             <li>salt</li>
             <li>sugar</li>
             <li>bottle</li>
-        </ol>
+        </ul>
+        <ul style="list-style-type:decimal; border: 2px solid red;width: 25%; float:left;margin:10px 10px">
+            <li>shop</li>
+            <li>stick</li>
+            <li>toys</li>
+            <li>salt</li>
+            <li>sugar</li>
+            <li>bottle</li>
+        </ul>
+        <ul style="list-style-type:decimal; border: 2px solid red;width: 25%; float:left;margin:10px 10px">
+            <li>shop</li>
+            <li>stick</li>
+            <li>toys</li>
+            <li>salt</li>
+            <li>sugar</li>
+            <li>bottle</li>
+        </ul>
+        </div>
     </body>
 </html>
